--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "googleapis": "^148.0.0",
+    "mongoose": "^8.14.0",
+    "node-cron": "^3.0.3",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
