--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec 'npm run build && npm run start'",
+    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec 'npm run build && npm run start:dev'",
     "build": "tsc",
-    "start": "node build/index.js"
+    "start:dev": "node build/index.js",
+    "start": "pm2 start build/index.js --name serri-assignment",
+    "stop": "pm2 stop serri-assignment",
+    "restart": "pm2 restart serri-assignment",
+    "logs": "pm2 logs serri-assignment",
+    "monit": "pm2 monit",
+    "status": "pm2 status",
+    "production": "npm run build && npm run start",
+    "cluster": "pm2 start build/index.js --name serri-assignment -i max"
   },
   "author": "Vaasu Bisht(vaasu2002)",
   "license": "Apache-2.0",
@@ -18,6 +26,7 @@
     "googleapis": "^148.0.0",
     "mongoose": "^8.14.0",
     "node-cron": "^3.0.3",
+    "pm2": "^6.0.5",
     "redis": "^4.7.0"
   },
   "devDependencies": {
